--- a/AA2380-MAXV_TSTQ9.qsf
+++ b/AA2380-MAXV_TSTQ9.qsf
@@ -52,7 +52,7 @@ set_global_assignment -name POWER_EXT_SUPPLY_VOLTAGE_TO_REGULATOR 3.3V
 set_global_assignment -name DEVICE_FILTER_PIN_COUNT 256
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 4
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
-set_global_assignment -name SIMULATION_MODE FUNCTIONAL
+set_global_assignment -name SIMULATION_MODE TIMING
 set_global_assignment -name VHDL_FILE F20_EmulateADCII.vhd
 set_global_assignment -name BDF_FILE Test_F20II.bdf
 set_global_assignment -name VECTOR_WAVEFORM_FILE F20_EmulateADCII.vwf
