--- a/AA2380-MAXV_TSTQ9.qsf
+++ b/AA2380-MAXV_TSTQ9.qsf
@@ -38,7 +38,7 @@
 
 set_global_assignment -name FAMILY "MAX II"
 set_global_assignment -name DEVICE EPM2210F324C3
-set_global_assignment -name TOP_LEVEL_ENTITY TEST_Multimodes_ExtClockEnable
+set_global_assignment -name TOP_LEVEL_ENTITY F7_ReadyII
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION "9.1 SP2"
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "08:51:00  JANUARY 24, 2024"
 set_global_assignment -name LAST_QUARTUS_VERSION "9.1 SP2"
@@ -51,7 +51,7 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_EXT_SUPPLY_VOLTAGE_TO_REGULATOR 3.3V
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 3
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
-set_global_assignment -name SIMULATION_MODE TIMING
+set_global_assignment -name SIMULATION_MODE FUNCTIONAL
 set_global_assignment -name VHDL_FILE F20_EmulateADCII.vhd
 set_global_assignment -name BDF_FILE Test_F20II.bdf
 set_global_assignment -name VECTOR_WAVEFORM_FILE F20_EmulateADCII.vwf
@@ -66,9 +66,13 @@ set_global_assignment -name BDF_FILE TEST_Multimodes_ExtClockEnable.bdf
 set_global_assignment -name VHDL_FILE F1_readADCmulti_ExtClk.vhd
 set_global_assignment -name QIP_FILE CONSTVAL.qip
 set_global_assignment -name VECTOR_WAVEFORM_FILE TEST_Multimodes_ExtClockEnable.vwf
-set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE TEST_Multimodes_ExtClockEnable.vwf
+set_global_assignment -name BDF_FILE TEST_Clocks_Modules.bdf
+set_global_assignment -name VECTOR_WAVEFORM_FILE TEST_Clocks_Modules.vwf
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name LL_ROOT_REGION ON -section_id "Root Region"
 set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
+set_global_assignment -name VHDL_FILE F7_ReadyII.vhd
+set_global_assignment -name VECTOR_WAVEFORM_FILE F7_ReadyII.vwf
+set_global_assignment -name INCREMENTAL_VECTOR_INPUT_SOURCE F7_ReadyII.vwf
