--- a/AA2380-MAXV_TSTQ9.qsf
+++ b/AA2380-MAXV_TSTQ9.qsf
@@ -49,7 +49,7 @@ set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name POWER_EXT_SUPPLY_VOLTAGE_TO_REGULATOR 3.3V
 set_global_assignment -name DEVICE_FILTER_SPEED_GRADE 3
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
-set_global_assignment -name SIMULATION_MODE TIMING
+set_global_assignment -name SIMULATION_MODE FUNCTIONAL
 set_global_assignment -name ADD_DEFAULT_PINS_TO_SIMULATION_OUTPUT_WAVEFORMS OFF
 set_global_assignment -name CHECK_OUTPUTS OFF
 set_global_assignment -name GLITCH_DETECTION OFF
